--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -11,7 +11,7 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/usename"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username"
