--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -19,10 +19,24 @@
     </FrameLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/iv_avatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/avatar_default"/>
 
+
+        android:src="@drawable/avatar_default"
+
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_UploadPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_50sdp"
+        android:text="@string/tai_anh_len"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_13ssp"
+        android:textStyle="bold"
+        app:cornerRadius="@dimen/_8sdp" />
     <LinearLayout
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
@@ -93,8 +107,8 @@
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_marginBottom="@dimen/_20sdp"
         android:text="@string/luu_thong_tin"
-        android:textStyle="bold"
-        android:textSize="@dimen/_13ssp"
         android:textColor="@color/white"
-        app:cornerRadius="@dimen/_8sdp"/>
+        android:textSize="@dimen/_13ssp"
+        android:textStyle="bold"
+        app:cornerRadius="@dimen/_8sdp" />
 </LinearLayout>
