--- a/app/src/main/res/layout/activity_messsage.xml
+++ b/app/src/main/res/layout/activity_messsage.xml
@@ -18,17 +18,22 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="45dp"
+            android:layout_margin="10dp"
+            android:layout_height="45dp"
             android:layout_gravity="center"
-            app:cardCornerRadius="44dp">
+            app:cardCornerRadius="25dp">
 
             <ImageView
                 android:id="@+id/img_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
+
                 android:src="@drawable/avatar_default" />
+
+
+
 
 
         </androidx.cardview.widget.CardView>
