--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,8 +21,7 @@
         android:id="@+id/iv_avatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/avatar_default"
-        />
+        android:src="@drawable/avatar_default" />
 
     <LinearLayout
         android:layout_marginTop="20dp"
