--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,55 +11,46 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
 
-        <RelativeLayout
-            android:id="@+id/nav"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/primary"
-            android:orientation="horizontal"
-
-            android:padding="20dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:padding="20dp"
+            android:background="@color/primary"
             >
-
-
-            <ImageView
-                android:id="@+id/btn_profile"
-                android:layout_width="40dp"
+            <EditText
+                android:paddingLeft="20dp"
+                android:id="@+id/edtSearch"
+                android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_account"
-                android:layout_alignParentStart="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/background_input"
                 />
-
-
-            <TextView
-                android:id="@+id/tv_DisplayName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+            <Button
+                android:layout_margin="20dp"
                 android:gravity="center"
-                android:paddingTop="10dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:text="Display Name"
-                android:textColor="@color/white" />
-
-            <ImageButton
-                android:id="@+id/btn_Search"
+                app:layout_constraintLeft_toRightOf="@+id/edtSearch"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_search" />
+                android:background="@drawable/ic_search"/>
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
 
             <androidx.recyclerview.widget.RecyclerView
