--- a/app/src/main/res/layout/user_holder.xml
+++ b/app/src/main/res/layout/user_holder.xml
@@ -15,9 +15,11 @@
         android:padding="7dp">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            app:cardCornerRadius="50dp">
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="30dp"
+            >
 
             <ImageView
                 android:id="@+id/img_friend"
